[project]
name = "pems-vmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Timothy Andersen", email = "timothy.andersen@sandag.org" }
]
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "fastexcel>=0.13.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "kaleido==0.2.1",
    "office365-rest-python-client>=2.6.1",
    "openpyxl>=3.1.5",
    "orca>=1.8",
    "pandas>=2.2.3",
    "panel>=1.6.3",
    "plotly>=6.0.1",
    "polars>=1.28.1",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "xhtml2pdf>=0.2.17",
    "xlsxwriter>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
